--- a/templates/layouts/layout.hbs
+++ b/templates/layouts/layout.hbs
@@ -10,6 +10,8 @@
 <body>
   {{{content}}}
   <script src="/js/script.js"></script>
+  <script src="/bower_components/tracking.js/build/tracking-min.js"></script>
+  <script src="/bower_components/threejs/build/three.min.js"></script>
   {{{_sections.scripts}}}
 </body>
 </html>
