3D scene aangemaakt, trackingJS nodemodule en bower maar werkt nog niet

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -7,9 +7,9 @@ body {
 }
 
 main {
-  @include center;
-  padding-top: 30px;
-  width: 960px;
+  //@include center;
+  padding-top: 10px;
+  width: 100%;
   font-size: 1.8em;
 }
 
