--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,4 +8,6 @@
 
 {{#section 'scripts'}}
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
+  <!--<script src="../bower_components/tracking/build/tracking-min.js"></script>-->
 {{/section}}
