--- a/templates/layouts/layout.hbs
+++ b/templates/layouts/layout.hbs
@@ -9,10 +9,11 @@
 </head>
 <body>
   {{{content}}}
-  <script src="/js/script.js"></script>
-  <script src="/bower_components/tracking.js/build/tracking-min.js"></script>
-  <script src="/bower_components/threejs/build/three.min.js"></script>
 
-  {{{_sections.scripts}}}
+  <!--<script src="/bower_components/threejs/build/three.min.js"></script>-->
+{{{_sections.scripts}}}
+  <script src="/js/script.js"></script>
+
+
 </body>
 </html>
