--- a/templates/partials/welcome.hbs
+++ b/templates/partials/welcome.hbs
@@ -1,5 +1,7 @@
 <header>
-  <h1>Hello {{uppercase name}}</h1>
+  <h1>RMD connect the dots</h1>
 </header>
 
-<canvas id="canvas" width="320" height="240"></canvas>
+<!--<canvas id="canvas" width="320" height="240"></canvas>-->
+<main class="container">
+  </main>
