--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -1,10 +1,12 @@
+<!-- deze file wordt in het spel ingeladen -->
+
 <main>
+  <span class="level {{level}}"></span>
+
   {{> welcome this}}
-  <p>helloooo</p>
 </main>
 
 {{#section 'head'}}
-
 {{/section}}
 
 {{#section 'scripts'}}
