--- a/templates/partials/welcome.hbs
+++ b/templates/partials/welcome.hbs
@@ -1,7 +1,10 @@
-<header>
-  <h1>RMD connect the dots</h1>
-</header>
+<!-- deze file wordt in alle pagina's ingeladen -->
+ <!--<header>
+ <h1>RMD connect the dots</h1>
+</header>-->
 
 <!--<canvas id="canvas" width="320" height="240"></canvas>-->
 <main class="container">
-  </main>
+
+
+</main>
