--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,8 +61,10 @@ main {
 }
 
 body {
+  color: #fff;
   font-size: 62.5%;
   font-family: 'Helvetica neue', Helvetica, Arial, sans-serif;
+  background-color: #181849;
 }
 
 main {
@@ -72,5 +74,6 @@ main {
 }
 
 h1 {
+  color: #fff;
   font-size: 1.3em;
 }
