--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -4,6 +4,9 @@
   <span class="level {{level}}"></span>
 
   {{> welcome this}}
+
+  <video id="video" width="320" height="240" preload autoplay loop muted></video>
+  <canvas id="canvas" width="320" height="240"></canvas>
 </main>
 
 {{#section 'head'}}
