controls rotation up and down gelinkt aan grootte kleurvlak

--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -5,8 +5,8 @@
 
   {{> welcome this}}
 
-  <video id="video" width="320" height="240" preload autoplay loop muted></video>
-  <canvas id="canvas" width="320" height="240"></canvas>
+  <video class="hidden" id="video" width="320" height="240" preload autoplay loop muted></video>
+  <canvas class="hidden" id="canvas" width="320" height="240"></canvas>
 </main>
 
 {{#section 'head'}}
