--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -15,7 +15,7 @@
 {{#section 'scripts'}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
-  <!--<script src="../bower_components/tracking/build/tracking-min.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="/js/script.js"></script>
 
 {{/section}}
