homepaginahtml css js, styling ui gamepage

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -2,18 +2,47 @@
 @import 'reset';
 
 body {
-  color: #fff;
+  color: #cfdde1;
+  text-align: center;
+  line-height: 2.7em;
   font-size: 62.5%;
-  font-family: 'Helvetica neue', Helvetica, Arial, sans-serif;
-  background-color: #181849;
+  font-family: 'outagecut', Arial, sans-serif;
+  background-color: #091741;
+  background-image: url('/assets/patterns/spacepattern.png');
+}
 
+button:focus {outline:0;}
+
+submit:focus,
+input:focus {
+    outline:none;
+}
+
+::selection {
+    color: #091741;
+    background: #bed5e4;
 }
 
 main {
-  //@include center;
-  padding-top: 10px;
+
+  //padding-top: 10px;
   width: 100%;
   font-size: 1.8em;
+}
+
+.logo {
+  background-image: url('/assets/logo.png');
+  background-repeat: none;
+  width: 380px;
+  height: 250px;
+  margin: 70px auto;
+  span {
+    visibility: hidden;
+  }
+}
+
+.center {
+  @include center;
 }
 
 h1 {
@@ -23,11 +52,179 @@ h1 {
 
 
 #video, #canvas {
-    bottom: 0;
+    left: 30px;
+    bottom: 30px;
     position: absolute;
     z-index: 100;
-  }
+}
+
+#video {
+  background: #8BAABE;
+  transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
+    border: 8px solid #8BAABE;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
 
 .hidden {
   visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
+
+.unhidden {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.selected {
+  color: #232323;
+}
+
+.level {
+  width: 960px;
+  margin: 0 auto;
+}
+
+
+.controls {
+  width: 530px;
+  margin: 0 auto;
+}
+
+.headsection {
+  width: 620px;
+  margin: 40px auto;
+}
+
+input[name=level] {
+    font-size: 1.7em;
+    font-family: 'outagecut', Helvetica, Arial, sans-serif;
+    color: #f9f9f9;
+    margin: 15px 28px;
+    width: 180px;
+    height: 100px;
+    background: none;
+
+    cursor: pointer;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
+
+.gamemode {
+    font-family: 'outagecut', Helvetica, Arial, sans-serif;
+    color: #f9f9f9;
+    margin: 45px 40px 15px 40px;
+    width: 180px;
+    height: 180px;
+    background: none;
+    border: 3px solid #94b5c9;
+    cursor: pointer;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
+
+.form [value=easy] {
+    border: 3px solid #49C16F;
+          -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    &:hover {
+      background-color: #49C16F;
+            -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.form [value=medium] {
+    border: 3px solid #DF965C;
+      -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    &:hover {
+      background-color: #DF965C;
+      -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.form [value=insane] {
+    border: 3px solid #D74C4F;
+          -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    &:hover {
+      background-color: #D74C4F;
+            -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.form [value=keyboard] {
+    background-image: url('/assets/keys.png');
+    &:hover {
+      background-color: #243461;
+      -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.form [value=webcam] {
+    background-image: url('/assets/cam.png');
+    &:hover {
+      background-color: #243461;
+      -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.form [value=start] {
+  margin-bottom: 50px;
+  color: #0C2349;
+  border: none;
+  font-size: 0.00001em;
+    background-color: none;
+    background-image: url('/assets/btnsubmithome.png');
+    width: 340px;
+    height: 140px;
+
+    &:hover {
+      background-image: url('/assets/btnsubmithomehovering.png');
+      -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+    }
+}
+
+.infobtn {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-image: url('/assets/info.png');
+  -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+  width: 40px;
+  height: 40px;
+
+  &:hover {
+    cursor: pointer;
+    background-image: url('/assets/infohover.png');
+    -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+  }
+}
+
+.arrowcontrols {
+  background-image: url('/assets/controls.png');
+  width: 320px;
+  height: 240px;
+  left: 30px;
+  bottom: 30px;
+  position: absolute;
+  z-index: 102;
+}
+
