--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -5,17 +5,21 @@
 
   {{> welcome this}}
 
-  <video class="hidden" id="video" width="320" height="240" preload autoplay loop muted></video>
-  <canvas class="hidden" id="canvas" width="320" height="240"></canvas>
+  <div class="infobtn">
+    <span></span>
+  </div>
+  <div class="arrowcontrols"></div>
+  <video class="" id="video" width="320" height="240" preload autoplay loop muted></video>
+  <canvas class="" id="canvas" width="320" height="240"></canvas>
 </main>
 
 {{#section 'head'}}
 {{/section}}
 
 {{#section 'scripts'}}
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.js"></script>
+  <!--<script src="../bower_components/tracking/build/tracking-min.js"></script>-->
     <script src="/js/script.js"></script>
 
 {{/section}}
