--- a/templates/layouts/layout.hbs
+++ b/templates/layouts/layout.hbs
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<script>
+  WebFontConfig = {
+    custom: {
+      families: ['outagecut'],
+      urls: ['assets/fonts/fonts.css']
+    }
+};
+
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = '//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })();
+</script>
 <head>
 	<meta charset="UTF-8">
 	<title>{{title}}</title>
