splitting the keyboard controls from the tracking controls and info button about controls

--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -8,6 +8,7 @@
   <div class="infobtn">
     <span></span>
   </div>
+  <div class="info infokeyboard hidden"></div>
   <div class="arrowcontrols"></div>
   <video class="" id="video" width="320" height="240" preload autoplay loop muted></video>
   <canvas class="" id="canvas" width="320" height="240"></canvas>
