--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,3 +277,23 @@ input[name=level] {
   position: absolute;
   z-index: 102;
 }
+
+.infokeyboard {
+  background-image: url("/assets/controlskeyboard.png");
+  width: 500px;
+  height: 420px;
+  left: 70px;
+  top: 10px;
+  position: absolute;
+  z-index: 102;
+}
+
+.infowebcam {
+  background-image: url("/assets/controlswebcam.png");
+  width: 500px;
+  height: 420px;
+  left: 70px;
+  top: 10px;
+  position: absolute;
+  z-index: 102;
+}
