betere trackingJS controls

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -59,11 +59,11 @@ h1 {
 }
 
 #video {
-  background: #8BAABE;
+  background: #f9f9f9;
   transform: rotateY(180deg);
     -webkit-transform:rotateY(180deg); /* Safari and Chrome */
     -moz-transform:rotateY(180deg); /* Firefox */
-    border: 8px solid #8BAABE;
+    border: 8px solid #f9f9f9;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
