--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,13 +123,13 @@ h1 {
 }
 
 #video {
-  background: #8BAABE;
+  background: #f9f9f9;
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
   /* Safari and Chrome */
   -moz-transform: rotateY(180deg);
   /* Firefox */
-  border: 8px solid #8BAABE;
+  border: 8px solid #f9f9f9;
   border-radius: 6px;
 }
 
