homepagina keuzes doorgeven naar game

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -24,8 +24,7 @@ input:focus {
 }
 
 main {
-
-  //padding-top: 10px;
+  height: 100%;
   width: 100%;
   font-size: 1.8em;
 }
@@ -50,7 +49,6 @@ h1 {
   font-size: 1.3em;
 }
 
-
 #video, #canvas {
     left: 30px;
     bottom: 30px;
@@ -61,8 +59,8 @@ h1 {
 #video {
   background: #f9f9f9;
   transform: rotateY(180deg);
-    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
-    -moz-transform:rotateY(180deg); /* Firefox */
+    -webkit-transform:rotateY(180deg);
+    -moz-transform:rotateY(180deg);
     border: 8px solid #f9f9f9;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
@@ -89,13 +87,13 @@ h1 {
 
 .level {
   width: 960px;
-  margin: 0 auto;
+  margin: 60px auto;
 }
 
 
 .controls {
-  width: 530px;
-  margin: 0 auto;
+  width: 800px;
+  margin: 140px auto;
 }
 
 .headsection {
@@ -103,20 +101,33 @@ h1 {
   margin: 40px auto;
 }
 
-input[name=level] {
+input[type="radio"] {
+    display:none;
+}
+
+input[type="radio"] + label {
+
     font-size: 1.7em;
     font-family: 'outagecut', Helvetica, Arial, sans-serif;
     color: #f9f9f9;
     margin: 15px 28px;
+    padding: 15px 28px;
     width: 180px;
-    height: 100px;
+    height: 300px;
     background: none;
-
     cursor: pointer;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
+
 }
+
+input[type="radio"]:checked + label {
+  border: 3px solid #f9f9f9;
+          -webkit-transition: 0.2s ease-in-out;
+      transition: 0.2s ease-in-out;
+}
+
 
 .gamemode {
     font-family: 'outagecut', Helvetica, Arial, sans-serif;
@@ -132,7 +143,7 @@ input[name=level] {
     border-radius: 6px;
 }
 
-.form [value=easy] {
+.form [value=easy] + label {
     border: 3px solid #49C16F;
           -webkit-transition: 0.2s ease-in-out;
       transition: 0.2s ease-in-out;
@@ -143,7 +154,7 @@ input[name=level] {
     }
 }
 
-.form [value=medium] {
+.form [value=medium] + label {
     border: 3px solid #DF965C;
       -webkit-transition: 0.2s ease-in-out;
       transition: 0.2s ease-in-out;
@@ -154,7 +165,7 @@ input[name=level] {
     }
 }
 
-.form [value=insane] {
+.form [value=insane] + label {
     border: 3px solid #D74C4F;
           -webkit-transition: 0.2s ease-in-out;
       transition: 0.2s ease-in-out;
@@ -165,7 +176,9 @@ input[name=level] {
     }
 }
 
-.form [value=keyboard] {
+.form [value=keyboard] + label {
+    margin-top: 100px;
+    padding: 70px 90px;
     background-image: url('/assets/keys.png');
     &:hover {
       background-color: #243461;
@@ -174,7 +187,10 @@ input[name=level] {
     }
 }
 
-.form [value=webcam] {
+.form [value=webcam] + label {
+  margin-top: 100px;
+  padding: 70px 90px;
+  height: 300px;
     background-image: url('/assets/cam.png');
     &:hover {
       background-color: #243461;
@@ -188,7 +204,7 @@ input[name=level] {
   color: #0C2349;
   border: none;
   font-size: 0.00001em;
-    background-color: none;
+    background-color: #091642;
     background-image: url('/assets/btnsubmithome.png');
     width: 340px;
     height: 140px;
