audio api, panning rocket right/left, ring collision sound, back to home button, styling info tracking

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -264,3 +264,25 @@ input[type="radio"]:checked + label {
   z-index: 102;
 }
 
+
+.backtohome {
+  font-size: 1em;
+  font-family: 'outagecut', Arial, sans-serif;
+  color: #f9f9f9;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  //padding-top: 25px;
+  text-align: center;
+  width: 220px;
+  height: 80px;
+  background-color: #232323;
+  position: absolute;
+  right: 90px;
+  bottom: 90px;
+
+  &:hover {
+    color: #8BAABE;
+  }
+}
+
