--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -9,6 +9,10 @@
     <span></span>
   </div>
   <div class="info infokeyboard hidden"></div>
+  <!--<div class="backtohome"><span>back to home</span></div>-->
+  <form class="form" method="get" action="/home">
+    <input class="backtohome hidden" type="submit" name="submit" value="back to home" />
+  </form>
   <div class="arrowcontrols"></div>
   <video class="" id="video" width="320" height="240" preload autoplay loop muted></video>
   <canvas class="" id="canvas" width="320" height="240"></canvas>
