--- a/templates/game.hbs
+++ b/templates/game.hbs
@@ -13,6 +13,7 @@
   <form class="form" method="get" action="/home">
     <input class="backtohome hidden" type="submit" name="submit" value="back to home" />
   </form>
+  <span class="info-orbitcontrols hidden">use your mouse to move around.</span>
   <div class="arrowcontrols"></div>
   <video class="" id="video" width="320" height="240" preload autoplay loop muted></video>
   <canvas class="" id="canvas" width="320" height="240"></canvas>
