--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -264,6 +264,12 @@ input[type="radio"]:checked + label {
   z-index: 102;
 }
 
+.info-orbitcontrols{
+   position: absolute;
+  right: 70px;
+  bottom: 130px;
+}
+
 
 .backtohome {
   //border 2px solid 091741;
